# dependency_tcp-messages

./: CMakeLists.txt  __info__.py  client.py  test.py
catchtests/: long_message.cpp  message.cpp
include/: tcp_messages.h
include/tcp_messages/: message.h  message_client.h  message_event.h  message_list.h  message_router.h  message_server.h
python/: __info__.py  build.py  client.py  event.py  server.py  test.py
python/resources/: readme.md
python/setup/: setup.cfg  setup.py
python/src/: client.py  connection.py  http.py  message.py  message_client.py  message_list.py  message_server.py  router.py  util.py
resources/: readme.md
setup/: setup.cfg  setup.py
src/: __init__.py  client.py  connection.py  http.py  message.cpp  message.py  message_client.cpp  message_client.py  message_event.cpp  message_list.cpp  message_list.py  message_router.cpp  message_router.py  message_server.cpp  message_server.py  router.py  server.py
